# fbterm

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  fbterm.1.in
im/: Makefile.am  Makefile.in  example.c  imapi.c  imapi.h  keycode.c  keycode.h
src/: Makefile.am  Makefile.in  fbconfig.cpp  fbconfig.h  fbdev.cpp  fbdev.h  fbio.cpp  fbio.h  fbshell.cpp  fbshell.h  fbshellman.cpp  fbshellman.h  fbterm.cpp  fbterm.h  font.cpp  font.h  immessage.h  improxy.cpp  improxy.h  input.cpp  input.h  input_key.h  mouse.cpp  mouse.h  screen.cpp  screen.h  screen_render.cpp  signalfd.h  vbe.h  vesadev.cpp  vesadev.h
src/lib/: Makefile.am  Makefile.in  charsetmap.cpp  instance.h  io.cpp  io.h  shell.cpp  shell.h  type.h  vterm.cpp  vterm.h  vterm_action.cpp  vterm_states.cpp  wcwidth.cpp
terminfo/: Makefile.am  Makefile.in  fbterm
